add_subdirectory(Aria2Net)
add_subdirectory(BiliApi)
add_subdirectory(ClientUi)
add_subdirectory(Download)
add_subdirectory(FFmpeg)
add_subdirectory(Logger)
add_subdirectory(Login)
add_subdirectory(NetWork)
add_subdirectory(Plugin)
add_subdirectory(Sqlite)
add_subdirectory(SUI)
add_subdirectory(ThreadPool)
add_subdirectory(Util)
add_subdirectory(Zipper)
